[package]
name = "stylo-compute"
version = "0.1.0"
edition = "2021"

[lib]
name = "stylo_compute"
path = "src/lib.rs"

[[bin]]
name = "stylo-compute"
path = "src/main.rs"

[dependencies]
# For Servo process communication approach
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"
which = "4.0"

# Future: Servo embedding dependencies (commented out for now)
# servo_components_layout = { path = "servo/components/layout" }
# servo_components_script = { path = "servo/components/script" }
# style = { path = "stylo/style" }
# selectors = { path = "stylo/selectors" }

# Future: Features for Servo embedding
# [features]
# default = ["servo"]
# servo = ["servo_components_layout/servo", "servo_components_script/servo"]

[[example]]
name = "servo_integration_demo"
path = "examples/servo_integration_demo.rs"

[[example]]
name = "real_servo_demo"
path = "examples/real_servo_demo.rs"

[[example]]
name = "optimized_servo_demo"
path = "examples/optimized_servo_demo.rs"
