[package]
name = "stylo-compute"
version = "0.1.0"
edition = "2021"

[dependencies]
# For Servo process communication approach
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"
which = "4.0"

# Future: Servo embedding dependencies (commented out for now)
# servo_components_layout = { path = "servo/components/layout" }
# servo_components_script = { path = "servo/components/script" }
# style = { path = "stylo/style" }
# selectors = { path = "stylo/selectors" }

# Future: Features for Servo embedding
# [features]
# default = ["servo"]
# servo = ["servo_components_layout/servo", "servo_components_script/servo"]

# Additional dependencies for real Servo integration
[dependencies.tempfile]
version = "3.8"

[dependencies.uuid]
version = "1.0"
features = ["v4"]

[dependencies.which]
version = "4.4"
